@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2005.03.09
-.TH TUXPAINT 1 "09 Mar 2005" "0.9.15" "Tux Paint"
+.\" tuxpaint.1 - 2005.03.24
+.TH TUXPAINT 1 "24 Mar 2005" "0.9.15" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -579,6 +579,7 @@ John Popplewell,
 Leandro Regueiro,
 Ilir Rugova,
 Kevin Patrick Scannell,
+Gia Shervashidze,
 Clytie Siddall,
 Geert Stams,
 Peter Sterba,
